<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp">

    <Button
        android:id="@+id/bt_perfil"
        android:layout_width="362dp"
        android:layout_height="86dp"
        android:backgroundTint="#B3B1B1"
        android:drawableLeft="@drawable/ic_person"
        android:onClick="abrirPerfil"
        android:text="Name User"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp" />

    <Button
        android:id="@+id/bt_cuenta"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:backgroundTint="#4C4A4A"
        android:drawableLeft="@drawable/ic_diamond"
        android:onClick="abrirCuentaBancaria"
        android:text="@string/cuenta_ba"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="302dp" />

    <Button
        android:id="@+id/bt_notificaciones"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:backgroundTint="#4C4A4A"
        android:drawableLeft="@drawable/ic_bell"
        android:onClick="abrirNotificaciones"
        android:text="@string/notificaciones"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="229dp" />

    <Button
        android:id="@+id/bt_ayuda"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:backgroundTint="#4C4A4A"
        android:drawableLeft="@drawable/ic_headset"
        android:onClick="abrirAyuda"
        android:text="@string/ayuda"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="374dp" />

    <Button
        android:id="@+id/bt_tipo_moneda"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:backgroundTint="#4C4A4A"
        android:drawableLeft="@drawable/ic_tipo_moneda"
        android:onClick="abrirTipoMoneda"
        android:text="@string/tipo_moneda"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="447dp" />

    <Button
        android:id="@+id/bt_cerrar_sesion"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:backgroundTint="#4C4A4A"
        android:drawableLeft="@drawable/ic_logout"
        android:onClick="haceLogoff"
        android:text="@string/cerrar_sesion"
        android:textSize="16sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="519dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/condiciones"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="724dp" />

</androidx.constraintlayout.widget.ConstraintLayout>