<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            tools:srcCompat="@android:drawable/ic_menu_gallery" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/correo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/clave"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/bt_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_ingresar"
            app:layout_constraintTop_toBottomOf="@+id/et_contrasena"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageButton
            android:id="@+id/bt_registro"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:contentDescription="@string/bt_registrarse"
            app:srcCompat="@drawable/ic_person_add" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/bt_tipo_cambio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tipo_cambio"
            android:textAlignment="center"
            app:srcCompat="@drawable/ic_swap_vert" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_cambio"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>

</LinearLayout>